--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,28 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
+  # A
+
+  # B
+
+  # C
   cupertino_icons: ^1.0.2
+
+  # E
+  email_validator: ^2.0.1
+  flutter_easyloading: ^3.0.3
+
+  # H
+  http: ^0.13.4
+
+  # S
+  shared_preferences: ^2.0.13
+
+  # T
+
+
+
 
 dev_dependencies:
   flutter_test:
